--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,10 +1,15 @@
 
-
-
 dotenv: .env
+networks: 
+  kovan:
+    verified: True
+  development:
+    verified: False
+
+
 wallets:
   from_key: 
-    0:  ${PRIVATE_KEY1}
+    0: ${PRIVATE_KEY1}
     1: ${PRIVATE_KEY2} 
     2: ${PRIVATE_KEY3}
     3: ${PRIVATE_KEY4}
